--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,13 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Blog</a>
+            <a class="nav-link active" aria-current="page" href="news.html">News</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="my_article.html">My Articles</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="my_portfolio.html">My PortFolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">About me</a>
@@ -58,6 +64,8 @@
     </div>
   </nav>
 
+
+
   <div class="px-4 pt-5 my-5 text-center border-bottom">
     <h1 class="display-4 fw-bold text-body-emphasis">Move With Joy</h1>
     <div class="col-lg-6 mx-auto">
@@ -69,10 +77,80 @@
           class="btn btn-outline-secondary btn-lg px-4">Contact US</button> </div>
     </div>
     <div class="overflow-hidden" style="max-height: 30vh;">
-      <div class="container px-5"> <img src="./static/images/moving-van.jpg" class="img-fluid border rounded-3 shadow-lg mb-4"
-          alt="Example image" width="700" height="500" loading="lazy"> </div>
+      <div class="container px-5"> <img src="./static/images/moving-van.jpg"
+          class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
+      </div>
     </div>
   </div>
+
+
+
+  <div class="container px-4 py-5" id="custom-cards">
+    <h2 class="pb-2 border-bottom">DataScience News</h2>
+    <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+      <div class="col">
+        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
+          style="background-image: url('unsplash-photo-1.jpg');">
+          <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Short title, long jacket</h3>
+            <ul class="d-flex list-unstyled mt-auto">
+              <li class="me-auto"> <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32"
+                  class="rounded-circle border border-white"> </li>
+              <li class="d-flex align-items-center me-3"> <svg class="bi me-2" width="1em" height="1em" role="img"
+                  aria-label="Location">
+                  <use xlink:href="#geo-fill"></use>
+                </svg> <small>Earth</small> </li>
+              <li class="d-flex align-items-center"> <svg class="bi me-2" width="1em" height="1em" role="img"
+                  aria-label="Duration">
+                  <use xlink:href="#calendar3"></use>
+                </svg> <small>3d</small> </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
+          style="background-image: url('unsplash-photo-2.jpg');">
+          <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Much longer title that wraps to multiple lines</h3>
+            <ul class="d-flex list-unstyled mt-auto">
+              <li class="me-auto"> <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32"
+                  class="rounded-circle border border-white"> </li>
+              <li class="d-flex align-items-center me-3"> <svg class="bi me-2" width="1em" height="1em" role="img"
+                  aria-label="Location">
+                  <use xlink:href="#geo-fill"></use>
+                </svg> <small>Pakistan</small> </li>
+              <li class="d-flex align-items-center"> <svg class="bi me-2" width="1em" height="1em" role="img"
+                  aria-label="Duration">
+                  <use xlink:href="#calendar3"></use>
+                </svg> <small>4d</small> </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
+          style="background-image: url('unsplash-photo-3.jpg');">
+          <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
+            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Another longer title belongs here</h3>
+            <ul class="d-flex list-unstyled mt-auto">
+              <li class="me-auto"> <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32"
+                  class="rounded-circle border border-white"> </li>
+              <li class="d-flex align-items-center me-3"> <svg class="bi me-2" width="1em" height="1em" role="img"
+                  aria-label="Location">
+                  <use xlink:href="#geo-fill"></use>
+                </svg> <small>California</small> </li>
+              <li class="d-flex align-items-center"> <svg class="bi me-2" width="1em" height="1em" role="img"
+                  aria-label="Duration">
+                  <use xlink:href="#calendar3"></use>
+                </svg> <small>5d</small> </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
 
   <div class="container px-4 py-5" id="featured-3">
@@ -128,6 +206,7 @@
     </div>
   </div>
 
+
   <div class="container">
     <div id="carouselExampleIndicators" class="carousel slide">
       <div class="carousel-indicators">
@@ -163,49 +242,20 @@
   </div>
 </body>
 
-
 <div class="container">
-<footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top">
-  <div class="col mb-3">
-    <a href="/" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none">
-      <svg class="bi me-2" width="40" height="32">
-        <use xlink:href="#bootstrap"></use>
-      </svg>
-    </a>
-    <p class="text-body-secondary">© 2025</p>
-  </div>
-  <div class="col mb-3"></div>
-  <div class="col mb-3">
-    <h5>Section</h5>
-    <ul class="nav flex-column">
-      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Home</a></li>
-      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Features</a></li>
-      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Pricing</a></li>
-      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">FAQs</a></li>
-      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">About</a></li>
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <p class="col-md-2 mb-0 text-body-secondary">© 2025 Company, Inc</p> <a href="/"
+      class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
+      aria-label="Bootstrap"> </a>
+    <ul class="nav col-md-6 justify-content-end">
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">News</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">My Articles</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">My PortFolio</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About Me</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Services</a></li>
     </ul>
-  </div>
-  <div class="col mb-3">
-    <h5>Section</h5>
-    <ul class="nav flex-column">
-      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Home</a></li>
-      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Features</a></li>
-      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Pricing</a></li>
-      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">FAQs</a></li>
-      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">About</a></li>
-    </ul>
-  </div>
-  <div class="col mb-3">
-    <h5>Section</h5>
-    <ul class="nav flex-column">
-      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Home</a></li>
-      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Features</a></li>
-      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Pricing</a></li>
-      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">FAQs</a></li>
-      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">About</a></li>
-    </ul>
-  </div>
-</footer>
+  </footer>
 </div>
 
 
