--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid ">
       <img src="./static/images/box-seam.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-      <a class="navbar-brand" href="#">Move it</a>
+      <a class="navbar-brand" href="#">Move Forward</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -31,13 +31,13 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="news.html">News</a>
+            <a class="nav-link active" aria-current="page" href="./news.html">News</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="my_article.html">My Articles</a>
+            <a class="nav-link active" aria-current="page" href="./my_article.html">My Articles</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="my_portfolio.html">My PortFolio</a>
+            <a class="nav-link active" aria-current="page" href="./my_portfolio.html">My PortFolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">About me</a>
