--- a/templates/my_portfolio.html
+++ b/templates/my_portfolio.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My PortFolio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+
 </head>
 <body>
-    <img src="../static/images/UnderConstruct.png" alt="model_underconstruct">
+    <img src="../static/images/UnderConstruct.png" class="img-fluid py-5 px-2"  alt="model_underconstruct">
 </body>
 </html>
 
