--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
             <a class="nav-link active" aria-current="page" href="./my_article.html">My Articles</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./my_portfolio.html">My PortFolio</a>
+            <a class="nav-link active" aria-current="page" href="my_portfolio.html">My PortFolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">About me</a>
