--- a/templates/index.html
+++ b/templates/index.html
@@ -31,13 +31,13 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./news.html">News</a>
+            <a class="nav-link active" aria-current="page" href="{{ url_for('news') }}">News</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./my_article.html">My Articles</a>
+            <a class="nav-link active" aria-current="page" href="{{ url_for('my_article') }}">My Articles</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="my_portfolio.html">My PortFolio</a>
+            <a class="nav-link active" aria-current="page" href="{{ url_for('my_portfolio') }}">My PortFolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">About me</a>
