--- a/templates/my_article.html
+++ b/templates/my_article.html
@@ -8,7 +8,7 @@
     integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
 
 </head>
-<body>
-    <img src="../static/images/UnderConstruct.png" class="img-fluid py-5 px-2"  alt="model_underconstruct">
+<body class="d-flex justify-content-center align-items-center vh-100">
+    <img src="{{ url_for('static', filename='images/UnderConstruct.png') }}" class="img-fluid"  alt="model_underconstruct">
 </body>
 </html>
