--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{{ url_for('index') }}">Home</a>
+            <a class="nav-link active" aria-current="page" href=" ">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="{{ url_for('news') }}">News</a>
@@ -40,7 +40,7 @@
             <a class="nav-link active" aria-current="page" href="{{ url_for('my_portfolio') }}">My PortFolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About me</a>
+            <a class="nav-link" href="{{url_for('about_me')}}">About me</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -57,7 +57,7 @@
           </li>
         </ul>
         <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Postcode" aria-label="Search" />
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
       </div>
@@ -248,11 +248,11 @@
       class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
       aria-label="Bootstrap"> </a>
     <ul class="nav col-md-6 justify-content-end">
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">News</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">My Articles</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">My PortFolio</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About Me</a></li>
+      <li class="nav-item"><a href="{{ url_for('index') }}" class="nav-link px-2 text-body-secondary">Home</a></li>
+      <li class="nav-item"><a href="{{ url_for('news') }}" class="nav-link px-2 text-body-secondary">News</a></li>
+      <li class="nav-item"><a href="{{ url_for('my_article') }}" class="nav-link px-2 text-body-secondary">My Articles</a></li>
+      <li class="nav-item"><a href="{{ url_for('my_portfolio') }}" class="nav-link px-2 text-body-secondary">My PortFolio</a></li>
+      <li class="nav-item"><a href="{{ url_for('about_me') }}" class="nav-link px-2 text-body-secondary">About Me</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Services</a></li>
     </ul>
   </footer>
