--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
             <a class="nav-link active" aria-current="page" href=" ">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{{ url_for('news') }}">News</a>
+            <a class="nav-link active" aria-current="page" href="{{ url_for('show_all_news') }}">News</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="{{ url_for('my_article') }}">My Articles</a>
@@ -249,7 +249,7 @@
       aria-label="Bootstrap"> </a>
     <ul class="nav col-md-6 justify-content-end">
       <li class="nav-item"><a href="{{ url_for('index') }}" class="nav-link px-2 text-body-secondary">Home</a></li>
-      <li class="nav-item"><a href="{{ url_for('news') }}" class="nav-link px-2 text-body-secondary">News</a></li>
+      <li class="nav-item"><a href="{{ url_for('show_all_news') }}" class="nav-link px-2 text-body-secondary">News</a></li>
       <li class="nav-item"><a href="{{ url_for('my_article') }}" class="nav-link px-2 text-body-secondary">My Articles</a></li>
       <li class="nav-item"><a href="{{ url_for('my_portfolio') }}" class="nav-link px-2 text-body-secondary">My PortFolio</a></li>
       <li class="nav-item"><a href="{{ url_for('about_me') }}" class="nav-link px-2 text-body-secondary">About Me</a></li>
