--- a/templates/index.html
+++ b/templates/index.html
@@ -47,12 +47,12 @@
               Services
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Statistics Consults</a></li>
+              <li><a class="dropdown-item" href="#">ML modeling</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li><a class="dropdown-item" href="#">DL modeling</a></li>
             </ul>
           </li>
         </ul>
