--- a/templates/my_article.html
+++ b/templates/my_article.html
@@ -9,7 +9,8 @@
 
 </head>
 <body class="d-flex justify-content-center align-items-center vh-100">
-    <img src="{{ url_for('static', filename='images/UnderConstruct.png') }}" class="img-fluid"  alt="model_underconstruct">
+    <img src="{{ url_for('static', filename='images/UnderConstruct.png') }}" 
+    class="img-fluid"  alt="model_underconstruct">
 </body>
 </html>
 
