--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DataScience Khala HomePage</title>
+  <title>DataScience HomePage</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
   <style>
@@ -40,19 +40,19 @@
             <a class="nav-link active" aria-current="page" href="{{ url_for('my_portfolio') }}">My PortFolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{url_for('about_me')}}">About me</a>
+            <a class="nav-link active" aria-current="page" href="{{ url_for('about_me')}}">About me</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Services
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="#">Statistics Consults</a></li>
-              <li><a class="dropdown-item" href="#">ML modeling</a></li>
+              <li><a class="dropdown-item" href="#">Develop Model</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
-              <li><a class="dropdown-item" href="#">DL modeling</a></li>
+              <li><a class="dropdown-item" href="#">Data Visualization</a></li>
             </ul>
           </li>
         </ul>
@@ -154,7 +154,7 @@
 
 
   <div class="container px-4 py-5" id="featured-3">
-    <h2 class="pb-2 border-bottom">Columns with icons</h2>
+    <h2 class="pb-2 border-bottom">My Articles</h2>
     <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
       <div class="feature col">
         <div
@@ -244,7 +244,7 @@
 
 <div class="container">
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-    <p class="col-md-2 mb-0 text-body-secondary">© 2025 Company, Inc</p> <a href="/"
+    <p class="col-md-2 mb-0 text-body-secondary"> © since 2025 <img src="./static/images/cc-by-nc-sa.svg" alt="cc"> </p> <a href="/"
       class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
       aria-label="Bootstrap"> </a>
     <ul class="nav col-md-6 justify-content-end">
