--- a/templates/index.html
+++ b/templates/index.html
@@ -47,8 +47,8 @@
               Services
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Statistics Consults</a></li>
-              <li><a class="dropdown-item" href="#">Develop Model</a></li>
+              <li><a class="dropdown-item" href="#">Statistics Consultation</a></li>
+              <li><a class="dropdown-item" href="#">Model Development</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
