--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@
 
 
   <div class="px-4 pt-5 my-5 text-center border-bottom">
-    <h1 class="display-4 fw-bold text-body-emphasis">Move With Joy</h1>
+    <h1 class="display-4 fw-bold text-body-emphasis">Play with Data</h1>
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4">Welcome to our website, where we are on a mission to provide exceptional moving services to
         customers in the US. As a startup, we believe that moving doesn't have to be stressful or complicated, and we
