--- a/templates/index.html
+++ b/templates/index.html
@@ -161,7 +161,7 @@
           class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
           <img src="./static/images/briefcase.svg" alt="briefcase" height="30">
         </div>
-        <h3 class="fs-2">Professional</h3>
+        <h3 class="fs-2">Statistics</h3>
         <p>Our team of professional movers are trained to prioritize efficiency, organization, and attention to detail.
           We understand that your possessions are more than just objects - they are a reflection of your life, memories,
           and experiences. That's why we take extra care to ensure that everything is packed and transported with the
@@ -178,7 +178,7 @@
           <img src="./static/images/bus-front.svg" alt="bus-front" height="30">
 
         </div>
-        <h3 class="fs-2 text-body-emphasis">Countrywide</h3>
+        <h3 class="fs-2 text-body-emphasis">Machine Learning and Deep Learning</h3>
         <p>We offer a range of services to suit your individual needs, whether you're moving locally or across the
           country. Our team can handle everything from packing and loading to unloading and unpacking, so you can focus
           on settling into your new home. And with our transparent pricing and no hidden fees, you can trust that you're
@@ -193,7 +193,7 @@
           class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
           <img src="./static/images/chat-square-heart.svg" alt="chat-square-heart" height="30">
         </div>
-        <h3 class="fs-2 text-body-emphasis">Personal Touch</h3>
+        <h3 class="fs-2 text-body-emphasis">Big Data</h3>
         <p>At our core, we believe that moving should be an exciting and positive experience, not a stressful one. By
           providing exceptional moving services in the US, we hope to revolutionize the way people think about moving
           and provide a better, more personalized experience for our customers. Contact us today to learn more about how
