--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
             <a class="nav-link active" aria-current="page" href=" ">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{{ url_for('show_all_news') }}">News</a>
+            <a class="nav-link active" aria-current="page" href="#">News</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="{{ url_for('my_article') }}">My Articles</a>
@@ -85,7 +85,7 @@
 
 
 
-  <div class="container px-4 py-5" id="custom-cards">
+  <!-- <div class="container px-4 py-5" id="custom-cards">
     <h2 class="pb-2 border-bottom">DataScience News</h2>
     <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
       <div class="col">
@@ -149,7 +149,44 @@
         </div>
       </div>
     </div>
+  </div> -->
+
+  <div class="container px-4 py-5" id="custom-cards">
+  <h2 class="pb-2 border-bottom">DataScience News</h2>
+  <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+
+    {% for article in news %}
+      {% set bg_image = article.urlToImage if article.urlToImage else '/static/fallback.jpg' %}
+      <div class="col">
+        <a href="{{ article.url }}" target="_blank" style="text-decoration: none;">
+          <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
+               style="background-image: url('{{ bg_image }}');
+               background-size: cover;
+                background-position: center;">
+
+            <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+              <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">{{ article.title }}</h3>
+              <ul class="d-flex list-unstyled mt-auto">
+                <li class="me-auto">
+                  <img src="https://github.com/twbs.png" alt="Logo" width="32" height="32"
+                       class="rounded-circle border border-white">
+                </li>
+                <li class="d-flex align-items-center">
+                  <svg class="bi me-2" width="1em" height="1em" role="img" aria-label="Published">
+                    <use xlink:href="#calendar3"></use>
+                  </svg>
+                  <small>{{ article.publishedAt[:10] }}</small>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </a>
+      </div>
+    {% endfor %}
+
   </div>
+</div>
+
 
 
 
@@ -249,7 +286,7 @@
       aria-label="Bootstrap"> </a>
     <ul class="nav col-md-6 justify-content-end">
       <li class="nav-item"><a href="{{ url_for('index') }}" class="nav-link px-2 text-body-secondary">Home</a></li>
-      <li class="nav-item"><a href="{{ url_for('show_all_news') }}" class="nav-link px-2 text-body-secondary">News</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">News</a></li>
       <li class="nav-item"><a href="{{ url_for('my_article') }}" class="nav-link px-2 text-body-secondary">My Articles</a></li>
       <li class="nav-item"><a href="{{ url_for('my_portfolio') }}" class="nav-link px-2 text-body-secondary">My PortFolio</a></li>
       <li class="nav-item"><a href="{{ url_for('about_me') }}" class="nav-link px-2 text-body-secondary">About Me</a></li>
