--- a/templates/my_portfolio.html
+++ b/templates/my_portfolio.html
@@ -65,6 +65,17 @@
         <img src="{{ url_for('static', filename='images/UnderConstruct.png') }}" class="img-fluid"
             alt="model_underconstruct">
     </div>
+
+    <h1>Embedded Streamlit Iris Predictor_test</h1>
+    <iframe 
+        src="https://stiris-test.streamlit.app/" 
+        width="100%" 
+        height="800" 
+        frameborder="0" 
+        allowfullscreen
+        sandbox="allow-scripts allow-same-origin allow-forms"
+    ></iframe>
+
 </body>
 
 <div class="container">
