--- a/templates/my_portfolio.html
+++ b/templates/my_portfolio.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My PortFolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+        integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
 
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid ">
@@ -67,36 +69,36 @@
     </div>
 
     <h1>Embedded Streamlit Iris Predictor_test</h1>
-    <iframe 
-        src="https://stiris-test.streamlit.app/" 
-        width="100%" 
-        height="800" 
-        frameborder="0" 
-        allowfullscreen
-        sandbox="allow-scripts allow-same-origin allow-forms"
-    ></iframe>
+    <p>Open the app here: <a href="https://stiris-test.streamlit.app/" target="_blank"
+            rel="noopener noreferrer">https://stiris-test.streamlit.app/</a></p>
+
 
 </body>
 
 <div class="container">
-  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-    <p class="col-md-2 mb-0 text-body-secondary"> © since 2025 <img src="./static/images/cc-by-nc-sa.svg" alt="cc"> </p> <a href="/"
-      class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
-      aria-label="Bootstrap"> </a>
-    <ul class="nav col-md-6 justify-content-end">
-      <li class="nav-item"><a href="{{ url_for('index') }}" class="nav-link px-2 text-body-secondary">Home</a></li>
-      <li class="nav-item"><a href="{{ url_for('show_all_news') }}" class="nav-link px-2 text-body-secondary">News</a></li>
-      <li class="nav-item"><a href="{{ url_for('my_article') }}" class="nav-link px-2 text-body-secondary">My Articles</a></li>
-      <li class="nav-item"><a href="{{ url_for('my_portfolio') }}" class="nav-link px-2 text-body-secondary">My PortFolio</a></li>
-      <li class="nav-item"><a href="{{ url_for('about_me') }}" class="nav-link px-2 text-body-secondary">About Me</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Services</a></li>
-    </ul>
-  </footer>
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+        <p class="col-md-2 mb-0 text-body-secondary"> © since 2025 <img src="./static/images/cc-by-nc-sa.svg" alt="cc">
+        </p> <a href="/"
+            class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
+            aria-label="Bootstrap"> </a>
+        <ul class="nav col-md-6 justify-content-end">
+            <li class="nav-item"><a href="{{ url_for('index') }}" class="nav-link px-2 text-body-secondary">Home</a>
+            </li>
+            <li class="nav-item"><a href="{{ url_for('show_all_news') }}"
+                    class="nav-link px-2 text-body-secondary">News</a></li>
+            <li class="nav-item"><a href="{{ url_for('my_article') }}" class="nav-link px-2 text-body-secondary">My
+                    Articles</a></li>
+            <li class="nav-item"><a href="{{ url_for('my_portfolio') }}" class="nav-link px-2 text-body-secondary">My
+                    PortFolio</a></li>
+            <li class="nav-item"><a href="{{ url_for('about_me') }}" class="nav-link px-2 text-body-secondary">About
+                    Me</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Services</a></li>
+        </ul>
+    </footer>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+    integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+    crossorigin="anonymous"></script>
 
 </html>
-
-
